--- a/app/sass/abstract/variables.sass
+++ b/app/sass/abstract/variables.sass
@@ -30,6 +30,7 @@ $c-tundora        : #444444
 $c-surfie-green   : #0E7D7D
 $c-cornflower-blue: #518EF8
 $c-azure-radiance : #1877F2
+$c-brick-red      : #CC2936
 // UI elements
 $body-bg: $c-white
 // Sizes
