--- a/app/sass/base/typography.sass
+++ b/app/sass/base/typography.sass
@@ -19,6 +19,8 @@ p, .p
   font-size: rem(16px)
   line-height: 1.4
   font-weight: 400
+.p-xl
+  font-size: rem(18px)
 
 // Colors
 .text-white
@@ -27,6 +29,8 @@ p, .p
   color: $c-mine-shaft
 .text-surfie-green
   color: $c-surfie-green
+.text-brick-red
+  color: $c-brick-red
 
 // Font weights
 .font-regular
