language select was added

--- a/app/sass/components/form-box.sass
+++ b/app/sass/components/form-box.sass
@@ -5,6 +5,8 @@
   border-radius: $radius-primary
   background-color: $c-white
   padding: 50px 135px 60px
+  +media-max($bp-lg)
+    padding: 50px 100px 60px
   +media-max($bp-md)
     padding: 50px 15px 60px
   // Elements
