--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -9,6 +9,8 @@
 @import ./base/animations
 @import ./base/typography
 @import ./base/cursor
+// Vendors
+@import ./vendors/simplebar
 // Pages
 @import ./pages/login-page
 // Components
@@ -21,4 +23,5 @@
 @import ./components/input
 @import ./components/button-group
 @import ./components/button
+@import ./components/select
 @import ./components/status-message
