--- a/app/pug/login-page.pug
+++ b/app/pug/login-page.pug
@@ -1,6 +1,7 @@
 extends /layouts/main
 include /partials/input
 include /partials/button
+include /partials/select
 include /partials/form-divider
 include /partials/status-message
 
@@ -9,44 +10,53 @@ block variables
 
 block content
   .login-page
-    .login-page__box
-      .form-box
-        .form-box__header
-          .form-box__icon
-            img(src="images/login-page/login-page-icon.svg", alt="login-page-icon")
-          .form-box__title
-            h2.text-surfie-green Log in
+    .container.login-page__container
+      .login-page__lang
+        +select({
+          auto:true,
+          label:{name:'English', selected:true, image:'images/flags/gb.svg'},
+          options:[
+            {name:'English', image:'images/flags/gb.svg'},
+            {name:'Lithuanian', image:'images/flags/lt.svg'},
+          ]
+        })
+      .login-page__box
+        .form-box
+          .form-box__header
+            .form-box__icon
+              img(src="images/login-page/login-page-icon.svg", alt="login-page-icon")
+            .form-box__title
+              h2.text-surfie-green Log in
+          .form-box__form
+            .form
+              .form__line
+                .form-group
+                  +input()(type="email" placeholder="Email address")
+              .form__line
+                .form-group
+                  +input()(type="password" placeholder="Password:")
+              .form__line
+                .column-group.column-group--justify-items-center
+                  .column-group__item
+                    +button({fluid:true})(type="submit")| Sign in
+                  .column-group__item
+                    +status-message({text:'Oops... Incorrect Email or Password.', icon:{name:'warning', width:'24', height:'24'}, color:'brick-red'})
+                  .column-group__item
+                    a(href="#").p.font-semibold.text-surfie-green Forgot password?
 
-        .form-box__form
-          .form
-            .form__line
-              .form-group
-                +input()(type="email" placeholder="Email address")
-            .form__line
-              .form-group
-                +input()(type="password" placeholder="Password:")
-            .form__line
-              .column-group.column-group--justify-items-center
-                .column-group__item
-                  +button({fluid:true})(type="submit")| Sign in
-                .column-group__item
-                  +status-message({text:'Oops... Incorrect Email or Password.', icon:{name:'warning', width:'24', height:'24'}, color:'brick-red'})
-                .column-group__item
-                  a(href="#").p.font-semibold.text-surfie-green Forgot password?
+          .form-box__divider
+            +form-divider()
 
-        .form-box__divider
-          +form-divider()
+          .form-box__buttons
+            .button-group.button-group--column
+              +button({fluid:true, classes:'button-group__button', bg:'cornflower-blue'})(type="submit" placeholder="Password:")
+                .button__prepend
+                  +icon('google', 'svg-icon--white')(width="25" height="25")
+                span Sign in with Google
+              +button({fluid:true, classes:'button-group__button', bg:'azure-radiance'})(type="submit" placeholder="Password:")
+                .button__prepend
+                  +icon('facebook', 'svg-icon--white')(width="25" height="25")
+                span Sign in with Facebook
 
-        .form-box__buttons
-          .button-group.button-group--column
-            +button({fluid:true, classes:'button-group__button', bg:'cornflower-blue'})(type="submit" placeholder="Password:")
-              .button__prepend
-                +icon('google', 'svg-icon--white')(width="25" height="25")
-              span Sign in with Google
-            +button({fluid:true, classes:'button-group__button', bg:'azure-radiance'})(type="submit" placeholder="Password:")
-              .button__prepend
-                +icon('facebook', 'svg-icon--white')(width="25" height="25")
-              span Sign in with Facebook
-
-        .form-box__footer
-          a(href="#").p.font-semibold.text-surfie-green.text-underline Create an account
+          .form-box__footer
+            a(href="#").p.font-semibold.text-surfie-green.text-underline Create an account
