--- a/app/pug/partials/select.pug
+++ b/app/pug/partials/select.pug
@@ -34,4 +34,4 @@ mixin select(props = {})
             if(right)
               .select__right
                 | !{right}
-    +input({classes:'select__input js-select-input'})(type="hidden")
+    input(type="hidden" class="select__input js-select-input")
