--- a/app/pug/login-page.pug
+++ b/app/pug/login-page.pug
@@ -28,13 +28,13 @@ block content
             .form-box__title
               h2.text-surfie-green Log in
           .form-box__form
-            .form
+            form.form
               .form__line
                 .form-group
-                  +input()(type="email" placeholder="Email address")
+                  +input({label:'Email:', animated:true})(type="email")
               .form__line
                 .form-group
-                  +input()(type="password" placeholder="Password:")
+                  +input({label:'Password:', animated:true})(type="password")
               .form__line
                 .column-group.column-group--justify-items-center
                   .column-group__item
