--- a/app/sass/components/form-divider.sass
+++ b/app/sass/components/form-divider.sass
@@ -5,7 +5,7 @@
   align-items: center
   justify-content: center
   z-index: 1
-  &::before
+  &:before
     position: absolute
     content: ''
     width: 100%
