--- a/app/sass/pages/login-page.sass
+++ b/app/sass/pages/login-page.sass
@@ -1,20 +1,20 @@
 .login-page
   position: relative
   padding: 100px 0 150px
-  &::after,
-  &::before
+  &:after,
+  &:before
     position: fixed
     content: ''
     left: 0
     z-index: -1
-  &::before
+  &:before
     bottom: 0
     +bg-img('../images/login-page/login-page-image.svg', contain, left bottom)
     width: 49%
     height: 49%
     +media-max($bp-md)
       display: none
-  &::after
+  &:after
     top: 0
     height: 100%
     width: 100%
