--- a/app/sass/components/status-message.sass
+++ b/app/sass/components/status-message.sass
@@ -2,4 +2,16 @@
   display: flex
   &__icon
     margin-right: 9px
-    margin-top: 1px
+    margin-top: 1
+  &__title
+    display: block
+    font-size: rem(18px)
+    font-weight: 600
+    line-height: 1.4
+    color: $c-brick-red
+  &__link
+    font-size: rem(14px)
+    font-weight: 400
+    line-height: 1.2
+    color: $c-boston-blue
+    text-decoration: underline
