--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -16,6 +16,7 @@
 // Components
 @import ./components/columng-group
 @import ./components/svg-icon
+@import ./components/link
 @import ./components/form
 @import ./components/form-box
 @import ./components/form-group
