--- a/app/pug/login-page.pug
+++ b/app/pug/login-page.pug
@@ -4,6 +4,7 @@ include /partials/button
 include /partials/select
 include /partials/form-divider
 include /partials/status-message
+include /partials/link
 
 block variables
   - const title = 'Login page'
@@ -40,9 +41,9 @@ block content
                   .column-group__item
                     +button({fluid:true})(type="submit")| Sign in
                   .column-group__item
-                    +status-message({text:'Oops... Incorrect Email or Password.', icon:{name:'warning', width:'24', height:'24'}, color:'brick-red'})
+                    +status-message({title:'Oops... Incorrect Email or Password.', icon:{name:'warning', width:'24', height:'24'}, color:'brick-red'})
                   .column-group__item
-                    a(href="#").p.font-semibold.text-surfie-green Forgot password?
+                    +link({link:'#', color:'surfie-green'})| Forgot password?
 
           .form-box__divider
             +form-divider()
@@ -59,4 +60,4 @@ block content
                 span Sign in with Facebook
 
           .form-box__footer
-            a(href="#").p.font-semibold.text-surfie-green.text-underline Create an account
+            +link({link:'#', color:'surfie-green', underline:true})| Create an account
