--- a/app/sass/base/typography.sass
+++ b/app/sass/base/typography.sass
@@ -19,8 +19,7 @@ p, .p
   font-size: rem(16px)
   line-height: 1.4
   font-weight: 400
-.p-xl
-  font-size: rem(18px)
+
 
 // Colors
 .text-white
@@ -31,6 +30,8 @@ p, .p
   color: $c-surfie-green
 .text-brick-red
   color: $c-brick-red
+.text-boston-blue
+  color: $c-boston-blue
 
 // Font weights
 .font-regular
