--- a/app/sass/pages/login-page.sass
+++ b/app/sass/pages/login-page.sass
@@ -1,6 +1,10 @@
 .login-page
   position: relative
   padding: 100px 0 150px
+  +media-max($bp-md)
+    padding: 80px 0 130px
+  +media-max($bp-sm)
+    padding: 40px 0 80px
   &:after,
   &:before
     position: fixed
@@ -12,8 +16,6 @@
     +bg-img('../images/login-page/login-page-image.svg', contain, left bottom)
     width: 49%
     height: 49%
-    +media-max($bp-md)
-      display: none
   &:after
     top: 0
     height: 100%
