login-page image was replaced by png

--- a/app/sass/pages/login-page.sass
+++ b/app/sass/pages/login-page.sass
@@ -13,7 +13,7 @@
     z-index: -1
   &:before
     bottom: 0
-    +bg-img('../images/login-page/login-page-image.svg', contain, left bottom)
+    +bg-img('../images/login-page/login-page-image.png', contain, left bottom)
     width: 49%
     height: 49%
   &:after
