--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -784,7 +784,6 @@ p,
   font-size: 1rem;
   line-height: 1;
   font-weight: 600;
-  overflow: hidden;
   z-index: 1;
   border-radius: 3px;
 }
@@ -796,6 +795,7 @@ p,
   height: 100%;
   top: 0;
   left: 0;
+  border-radius: 3px;
   background-color: #0E7D7D;
   -webkit-transition: 0.2s;
   transition: 0.2s;
@@ -806,6 +806,11 @@ p,
   opacity: 0.8;
 }
 
+.button:focus:after {
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(14, 125, 125, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(14, 125, 125, 0.5);
+}
+
 .button--fluid {
   width: 100%;
 }
@@ -814,8 +819,18 @@ p,
   background-color: #518EF8;
 }
 
+.button--bg-cornflower-blue:focus:after {
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(81, 142, 248, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(81, 142, 248, 0.5);
+}
+
 .button--bg-azure-radiance:after {
   background-color: #1877F2;
+}
+
+.button--bg-azure-radiance:focus:after {
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(24, 119, 242, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(24, 119, 242, 0.5);
 }
 
 .button__prepend,
