input label was fixed

--- a/app/sass/components/input.sass
+++ b/app/sass/components/input.sass
@@ -10,6 +10,7 @@
   &__label
     position: absolute
     padding: 0 5px
+    user-select: none
     top: 50%
     left: 10px
     transform: translateY(-50%)
