--- a/app/sass/components/input.sass
+++ b/app/sass/components/input.sass
@@ -16,6 +16,7 @@
     transform: translateY(-50%)
     font-size: rem(16px)
     line-height: 1
+    cursor: text
     font-weight: 400
     transition: 0.2s
   &__field
