--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -719,6 +719,7 @@ p,
   transform: translateY(-50%);
   font-size: 1rem;
   line-height: 1;
+  cursor: text;
   font-weight: 400;
   -webkit-transition: 0.2s;
   transition: 0.2s;
