sizes were decreased

--- a/app/pug/login-page.pug
+++ b/app/pug/login-page.pug
@@ -37,7 +37,7 @@ block content
                 .form-group
                   +input({label:'Password:', animated:true})(type="password")
               .form__line
-                .column-group.column-group--justify-items-center
+                .column-group.column-group--md.column-group--justify-items-center
                   .column-group__item
                     +button({fluid:true})(type="submit")| Sign in
                   .column-group__item
