input animation was fixed

--- a/app/pug/login-page.pug
+++ b/app/pug/login-page.pug
@@ -32,10 +32,10 @@ block content
             form.form
               .form__line
                 .form-group
-                  +input({label:'Email:', animated:true})(type="email")
+                  +input({label:'Email:', name:'email', animated:true})(type="email")
               .form__line
                 .form-group
-                  +input({label:'Password:', animated:true})(type="password")
+                  +input({label:'Password:', name:'password', animated:true})(type="password")
               .form__line
                 .column-group.column-group--md.column-group--justify-items-center
                   .column-group__item
