new sizes were added

--- a/app/sass/base/typography.sass
+++ b/app/sass/base/typography.sass
@@ -5,6 +5,8 @@ html, body
   text-align: left
   font-weight: 400
   color: $c-mine-shaft
+  +media-max($bp-sm)
+    font-size: 15px
 
 h1, .h1
   font-size: rem(40px)
