--- a/app/sass/components/form-box.sass
+++ b/app/sass/components/form-box.sass
@@ -1,13 +1,13 @@
 .form-box
   width: 100%
-  max-width: 790px
+  max-width: 560px
   border: 1px solid $c-alto
   border-radius: $radius-primary
   background-color: $c-white
-  padding: 40px 120px 60px
-  +media-max($bp-lg)
-    padding: 40px 100px 60px
+  padding: 40px 80px 60px
   +media-max($bp-md)
+    padding: 40px 55px 60px
+  +media-max($bp-sm)
     padding: 40px 15px 60px
   // Elements
   &__header
@@ -17,9 +17,9 @@
     display: inline-block
     margin-bottom: 5px
   &__form
-    margin-bottom: 30px
+    margin-bottom: 25px
   &__divider
-    margin-bottom: 30px
+    margin-bottom: 25px
   &__buttons
     margin-bottom: 20px
   &__footer
