--- a/app/sass/components/button.sass
+++ b/app/sass/components/button.sass
@@ -2,7 +2,7 @@
   position: relative
   display: inline-flex
   justify-content: center
-  padding: 17px 20px
+  padding: 14px 20px 15px
   color: $c-white
   font-size: rem(16px)
   line-height: 1
