lang select was moved up and right. Status message font-size was decreased

--- a/app/pug/login-page.pug
+++ b/app/pug/login-page.pug
@@ -11,7 +11,7 @@ block variables
 
 block content
   .login-page
-    .container.login-page__container
+    .container
       .login-page__lang
         +select({
           auto:true,
