--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -497,12 +497,19 @@ p,
 
 .login-page {
   position: relative;
-  padding: 40px 0;
+  padding: 80px 0;
   height: 100%;
   min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -534,13 +541,10 @@ p,
   opacity: 0.5;
 }
 
-.login-page__container {
-  position: relative;
-}
-
 .login-page__lang {
   position: absolute;
-  right: 15px;
+  top: 40px;
+  right: 40px;
 }
 
 .login-page__box {
@@ -1012,7 +1016,7 @@ p,
 
 .status-message__title {
   display: block;
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-weight: 600;
   line-height: 1.4;
   color: #CC2936;
@@ -1421,6 +1425,10 @@ p,
     max-width: 960px;
   }
 
+  .login-page {
+    padding: 40px 0 60px;
+  }
+
   .login-page__lang {
     position: static;
     display: -webkit-box;
@@ -1473,10 +1481,6 @@ p,
   html,
   body {
     font-size: 15px;
-  }
-
-  .login-page {
-    padding: 40px 0 60px;
   }
 
   .form-box {
