--- a/app/sass/components/input.sass
+++ b/app/sass/components/input.sass
@@ -6,6 +6,7 @@
       top: 0
       font-weight: 600
       background-color: $c-white
+      color: $c-tundora
   // Elemenst
   &__label
     position: absolute
@@ -14,16 +15,17 @@
     top: 50%
     left: 10px
     transform: translateY(-50%)
-    font-size: rem(16px)
-    line-height: 1
-    cursor: text
+    font-size: rem(15px)
     font-weight: 400
+    line-height: 1
+    color: $c-silver-chalice
+    cursor: text
     transition: 0.2s
   &__field
     width: 100%
     display: block
     padding: 10px 15px 11px
-    font-size: rem(16px)
+    font-size: rem(15px)
     line-height: 1
     font-weight: 400
     border-radius: $radius-primary
