--- a/app/sass/components/select.sass
+++ b/app/sass/components/select.sass
@@ -26,10 +26,10 @@ $select-height: 45px
     display: flex
     align-items: center
     justify-content: space-between
-    font-size: rem(16px)
-    line-height: 1
+    font-size: rem(15px)
     font-weight: 600
-    color: $c-silver-chalice
+    line-height: 1
+    color: $c-tundora
     white-space: nowrap
     &[data-selected]
       color: $c-tundora
