border transition was added to input

--- a/app/sass/components/input.sass
+++ b/app/sass/components/input.sass
@@ -32,6 +32,7 @@
     background-color: $c-white
     border: 1px solid $c-alto
     color: $c-tundora
+    transition: 0.2s
     &:placeholder
       color: $c-silver-chalice
     &:focus
