focus link color was changed

--- a/app/pug/login-page.pug
+++ b/app/pug/login-page.pug
@@ -43,7 +43,7 @@ block content
                   .column-group__item
                     +status-message({title:'Oops... Incorrect Email or Password.', icon:{name:'warning', width:'24', height:'24'}, color:'brick-red'})
                   .column-group__item
-                    +link({link:'#', color:'surfie-green'})| Forgot password?
+                    +link({link:'#'})| Forgot password?
 
           .form-box__divider
             +form-divider()
@@ -60,4 +60,4 @@ block content
                 span Sign in with Facebook
 
           .form-box__footer
-            +link({link:'#', color:'surfie-green', underline:true})| Create an account
+            +link({link:'#', underline:true})| Create an account
